<resources>
    <string name="app_name">FoodBook</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="title_post">Post</string>

    <string name="description">Describe your food item....</string>
    <string name="location1">Flat no./House no.</string>
    <string name="location2">Street/Area/Landmark</string>
    <string name="location3">Town/City</string>
    <string name="price">Enter Price</string>
    <string name="freshness">Enter Freshness</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>